--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^14.2.1",
     "@tonconnect/ui-react": "^2.0.0",
     "@types/jest": "^28.1.3",
+    "@types/lodash.isequal": "^4.5.8",
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
@@ -17,6 +18,7 @@
     "gsap": "^3.12.5",
     "immer": "^9.0.15",
     "leva": "^0.9.35",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.14",
     "postcss-cli": "^9.1.0",
     "postcss-preset-env": "^7.7.2",
